sth changes